--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "styled-components": "^3.2.3"
   }
 }
