--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "express": "^4.16.3",
     "mongoose": "^5.0.10",
     "morgan": "^1.9.0",
+    "react-bootstrap": "^0.32.1",
     "react-router-dom": "^4.2.2",
     "styled-components": "^3.2.3"
+  },
+  "devDependencies": {
+    "html": "^1.0.0",
+    "loader": "^2.1.1"
   }
 }
