--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^5.0.10",
     "morgan": "^1.9.0",
     "react-bootstrap": "^0.32.1",
+    "react-image-autofit-frame": "^0.1.0",
     "react-router-dom": "^4.2.2",
     "styled-components": "^3.2.3"
   },
